# hyper-pee

./: .flake8  noxfile.py  pyproject.toml
src/hyper_pee/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
