[tool.poetry]
name = "hyper-pee"
version = "0.1.0"
description = "My hypermodern python project"
authors = ["State Your Name <fromagepantalons@fmail.com>"]
license = "GNU 2.0"
readme = "README.md"
homepage = "https://github.com/cheesetrousers/hyper-pee"
repository = "https://github.com/cheesetrousers/hyper-pyee"
keywords = ["word", "key"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.3.3"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyper-pee = "hyper_pee.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hyper_pee"]

[tool.coverage.report]
show_missing = true
fail_under = 100
